welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: not found: value esSurMessage
while (esSurMessage) {
       ^